# finviz-rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
examples/: crypto.rs  forex.rs  future.rs  group.rs  insider.rs  iter_all_enum_variants.rs  news.rs  output_csv.rs  output_json.rs  screener.rs  tickers.rs
src/: common.rs  crypto.rs  forex.rs  future.rs  group.rs  insider.rs  lib.rs  main.rs  news.rs  order_type.rs  output.rs  screener.rs  screener_type.rs  signal_type.rs  tickers.rs  web_scraper.rs
