[package]
name = "finviz_rs"
version = "0.1.0"
edition = "2021"
authors = ["ryanpig <ryanpig@gmail.com>"]
readme = "README.md"
license = "MIT"
description = "fetch finviz financial data"
homepage = "https://github.com/ryanpig/finviz-rs"
repository = "https://github.com/ryanpig/finviz-rs"
keywords = ["finance", "finviz"]

[dependencies]
reqwest = { version = "^0.11",  features = ["blocking", "json"] }
scraper = "^0.16"
tabled = { version = "^0.12.0" }
serde_json = "^1.0.96"
csv = { version = "^1.2.1", optional = true }


[features]
default = ["output_csv"]
output_csv = ["dep:csv"]




