[package]
name = "finviz_rs"
version = "0.2.0"
edition = "2021"
authors = ["ryanpig <ryanpig@gmail.com>"]
readme = "README.md"
license = "MIT"
description = "Fetch finviz financial data"
documentaion = "https://docs.rs/finviz_rs/0.2.0/finviz_rs/"
homepage = "https://github.com/ryanpig/finviz-rs"
repository = "https://github.com/ryanpig/finviz-rs"
keywords = ["finance", "finviz", "screener", "stock-data", "csv"]

[dependencies]
reqwest = { version = "^0.11",  features = ["blocking", "json"] }
scraper = "^0.16"
tabled = { version = "^0.12.0" }
serde_json = "^1.0.96"
csv = { version = "^1.2.1", optional = true }


[features]
default = ["output_csv"]
output_csv = ["dep:csv"]




