[package]
name = "finviz_rs"
version = "0.3.3"
edition = "2021"
authors = ["ryanpig <ryanpig@gmail.com>"]
readme = "README.md"
license = "MIT"
description = "Fetch finviz financial data"
homepage = "https://github.com/ryanpig/finviz-rs"
repository = "https://github.com/ryanpig/finviz-rs"
keywords = ["finance", "finviz", "screener", "stock-data", "csv"]

[dependencies]
reqwest = { version = "^0.11",  features = ["json"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
scraper = "^0.16"
tabled = { version = "^0.12.0" }
serde_json = "^1.0.96"
csv = { version = "^1.2.1", optional = true }
strum = { version = "^0.24", features = ["derive"] }
async-trait = "0.1.68"


[features]
default = ["output_csv"]
output_csv = ["dep:csv"]

